added svg package and updaue index.js file

--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "draw"
   ],
   "nativePackage": true,
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "react-native-svg": "^12.1.0"
+  }
 }
